--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@
 pandas==2.2.3 # home
 tqdm==4.67.1
 tabulate==0.9.0
-# matplotlib==3.7.5 # office
-matplotlib==3.10.3 # home
+matplotlib==3.7.5 # office
+# matplotlib==3.10.3 # home
 plotly==6.0.1
 ydata-profiling==4.12.1
 # transformers==4.46.3 # office
@@ -15,5 +15,9 @@ jupyter
 ipykernel
 # running manual pip install for torch for laptop gpu
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
-# torch==2.4.1 # even for GPU # office
+# torch==2.4.1 # office
+# torch==2.3.0+cu121
+# torchvision==0.18.0+cu121
+# torchaudio==2.3.0+cu121
+# --extra-index-url https://download.pytorch.org/whl/cu121
 
